--- a/Amstel/fade-galega.html
+++ b/Amstel/fade-galega.html
@@ -47,11 +47,11 @@
          .cta {
             position: absolute;
             bottom: 85px;
-            width: 70px;
+            width: 110px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 48%;
-            left: -30px;
+            margin-left:90px;
+            
             background-color: #002da8;
             padding: 5px;
             border-radius: 20px;
@@ -109,7 +109,7 @@
             padding: 6px 0 0 .3em;
             line-height: 1.1;
             color: #000;
-            text-align: left;
+            text-align: center;
             margin-top: 10px;
             width: 99%;
             
@@ -270,15 +270,15 @@
 <body class="amstel" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
         <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¿Quieres probar?</span></div>
-        <a href="https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" style="display: block;" target="_blank">
+        <a href="http://amstellight.com.mx/" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:14px;text-align:left;"> Es galeg@ ou descendente e retornaches? Solicita a túa axuda de 5.000 a 7.000€ para emprender!</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:22px;text-align:center;"> Cual es la cerveza mas ligera de México?</span></div>
             <div style="bottom:0px;height:45px;text-align:right ;margin-top:-5px; margin-right: 5px;"> <img src="https://i.imgur.com/mmpMxGz.png" style="height:35px;margin-top:-3px;">
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-25px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/ct3Z8bp.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://sede.xunta.gal/detalle-procedemento?codtram=PR937A" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="22" /></a> </span></div>
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-25px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://amstellight.com.mx/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=http://amstellight.com.mx/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/ct3Z8bp.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=http://amstellight.com.mx/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
