--- a/Amstel/fijo-gif.html
+++ b/Amstel/fijo-gif.html
@@ -229,12 +229,12 @@
             <div id="te-wrapper" class="te-wrapper">
                 
                 <div class="te-images">
-                    <img src="https://i.imgur.com/a6m47Dc.jpg" alt="" />
+                    <img src="https://i.imgur.com/bKHtXQ5.gif" alt="" />
                     <img src="https://i.imgur.com/ordYiaP.jpg" alt="" />
                     <img src="https://i.imgur.com/NTGzDzf.jpg" alt="" />
                 </div>
                 <div class="te-cover">
-                    <img src="https://i.imgur.com/a6m47Dc.jpg" alt="" />
+                    <img src="https://i.imgur.com/bKHtXQ5.gif" alt="" />
                 </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
@@ -263,151 +263,7 @@
         </a>
     </div>
 
-    <script>
-        var cerveza = (function() {
-            //funcionamiento del script
-            var teWrapper = null,
-                teCover = null,
-                teImages = null,
-                containerE = null;
-            imagesCount = 0,
-                teTransition = null;
-
-            //configuracion
-            var _currentImg = 0,
-                animated = false,
-                _TRANSITION = 'te-example3';
-
-            // Función que hace compatibles los eventos con todos los navegadores.
-            function _addEvent(el, name, fn) {
-                if (el.addEventListener) {
-                    el.addEventListener(name, fn);
-                } else if (el.attachEvent) {
-                    el.attachEvent('on' + name, function(evt) {
-                        evt.target = evt.target || evt.srcElement;
-                        // Call the event to ensure uniform 'this' handling, pass it event
-                        fn.call(el, evt);
-                    });
-                } else if (typeof el['on' + name] === 'undefined' || el['on' + name] === null) {
-                    el['on' + name] = function(evt) {
-                        evt.target = evt.target || evt.srcElement;
-                        // Call the event to ensure uniform 'this' handling, pass it event
-                        fn.call(el, evt);
-                    };
-                }
-            };
-            //limpiar todos los elementos hijos del un uno padre
-            function _removeChildrens(arrayElements) {
-
-                for (var i = 0; i < arrayElements.length; i++) {
-                    while (arrayElements[i].firstChild) {
-                        arrayElements[i].removeChild(arrayElements[i].firstChild);
-                    }
-                }
-
-                return arrayElements;
-            };
-
-            //function para inicializar el carousel 
-            function _initCarousel() {
-                if (animated)
-                    return false;
-
-                animated = true;
-                showNext();
-                setInterval(_initCarousel, 5000);
-            };
-
-            //function propias del component
-            function webkitAnimationEnd(event) {
-                var teCover = document.querySelector(containerE + ' #te-wrapper div.te-cover'),
-                    teWrapper = document.querySelector(containerE + ' #te-wrapper'),
-                    teTransition = document.querySelector(containerE + ' #te-wrapper .te-transition');
-
-                teCover.classList.remove('te-hide');
-                teWrapper.classList.remove('te-perspective');
-                teTransition.classList.remove('te-show');
-                animated = false;
-            };
-
-            function updateImages() {
-
-                var back = document.querySelectorAll(containerE + ' #te-wrapper .te-transition div.te-back'),
-                    front = document.querySelectorAll(containerE + ' #te-wrapper .te-transition div.te-front');
-
-                (_currentImg === imagesCount - 1) ?
-                (last_img = imagesCount - 1, _currentImg = 0) :
-                (last_img = _currentImg, ++_currentImg);
-
-                var teImages = document.querySelectorAll(containerE + ' #te-wrapper div.te-images > img');
-                var last_img = teImages[last_img],
-                    currentImg = teImages[teImages.length == _currentImg ? 0 : _currentImg];
-
-                _currentImg = teImages.length == _currentImg ? 0 : _currentImg;
-
-                var urlLast = last_img.attributes.getNamedItem('src').value;
-                var urlCurrent = currentImg.attributes.getNamedItem('src').value;
-
-                _removeChildrens(front);
-                for (var i = 0; i < front.length; i++) {
-                    var img = document.createElement('img');
-                    img.setAttribute('style', 'width: 300px;height: 350px;');
-                    img.setAttribute('src', urlLast);
-                    front[i].appendChild(img);
-                }
-
-                _removeChildrens(back);
-                for (var i = 0; i < back.length; i++) {
-                    img = document.createElement('img');
-                    img.setAttribute('style', 'width: 300px;height: 350px;');
-                    img.setAttribute('src', urlCurrent);
-                    back[i].appendChild(img);
-                }
-
-                var teCover = document.querySelector(containerE + ' #te-wrapper div.te-cover img');
-                teCover.setAttribute('src', urlCurrent);
-            };
-
-            function showNext() {
-
-                var teCover = document.querySelector(containerE + ' #te-wrapper div.te-cover'),
-                    teWrapper = document.querySelector(containerE + ' #te-wrapper'),
-                    teTransition = document.querySelector(containerE + ' #te-wrapper .te-transition');
-
-                teTransition.classList.add('te-show');
-                teCover.classList.add('te-hide');
-                teWrapper.classList.add('te-perspective');
-
-                updateImages();
-            };
-
-            function show(container) {
-
-                var containerElement = document.querySelector('.' + container);
-                if (containerElement != null) {
-                    containerE = '.' + container;
-
-
-                    //inicializando variables global
-                    teWrapper = document.querySelector(containerE + ' #te-wrapper');
-                    teCover = document.querySelector(containerE + ' #te-wrapper div.te-cover');
-                    teImages = document.querySelectorAll(containerE + ' #te-wrapper div.te-images > img');
-                    imagesCount = teImages.length;
-                    teTransition = document.querySelector(containerE + ' #te-wrapper .te-transition');
-
-                    //agregar la transition
-                    teTransition.classList.add(_TRANSITION);
-                    _addEvent(teWrapper, 'webkitAnimationEnd', webkitAnimationEnd);
-
-                    setInterval(_initCarousel, 5000);
-                }
-            };
-
-            return {
-                show: show
-            };
-        })();
-        cerveza.show('cerveza');
-    </script>
+   
+       
 </body>
 </html>
