correccion textos e imagen

--- a/Amstel/fade-galega.html
+++ b/Amstel/fade-galega.html
@@ -73,7 +73,7 @@
         }
 
         .amstel .bg.cover-2 {
-            background-image: url(https://i.imgur.com/4LxPFuu.jpg)
+            background-image: url(https://i.imgur.com/3WLiabX.jpg)
         }
 
         .amstel .bg.cover-3 {
