--- a/Amstel/slider-cta central.html
+++ b/Amstel/slider-cta central.html
@@ -247,7 +247,7 @@
 						</span> <br>
                         <span class="bzm_text_medium" style="color: black;line-height:1.2em; font-size:14px; width:95%; text-align:justify;">
                         <p style="margin-top: 10px; line-height: 1.2em; margin-left: 3px; ">
-                            Este verano, lanzamos exclusivamente en<b>Ciudad de México </b> nuestra nueva <b>Amstel Ultra</b>, una cerveza<b> Premium con solo 85 calorías y 2.4 gramos de carbohidratos</b> lo que ha hace ser <b>la cerveza más ligera de México.</b> </p>
+                            Este verano, lanzamos exclusivamente en <b>Ciudad de México </b> nuestra nueva <b>Amstel Ultra</b>, una cerveza<b> Premium con solo 85 calorías y 2.4 gramos de carbohidratos</b> lo que la hace ser <b>la cerveza más ligera de México.</b> </p>
  
                     
                     <div id="botones-para-compartir" style="display:inline;float:left;margin-top:2px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://amstellight.com.mx/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=http://amstellight.com.mx/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/MRUYpOx.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://amstellight.com.mx/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="22" /></a></span></div>
