--- a/Amstel/fade-galega.html
+++ b/Amstel/fade-galega.html
@@ -73,7 +73,7 @@
         }
 
         .amstel .bg.cover-2 {
-            background-image: url(https://i.imgur.com/MGhr6kL.jpg)
+            background-image: url(https://i.imgur.com/Vpgn3IP.jpg)
         }
 
         .amstel .bg.cover-3 {
