--- a/Amstel/fade-galega.html
+++ b/Amstel/fade-galega.html
@@ -276,7 +276,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:22px;text-align:center;"> Cual es la cerveza mas ligera de México?</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:22px;text-align:center;"> ¿Cual es la cerveza mas ligera de México?</span></div>
             <div style="bottom:0px;height:45px;text-align:right ;margin-top:-5px; margin-right: 5px;"> <img src="https://i.imgur.com/mmpMxGz.png" style="height:35px;margin-top:-3px;">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-25px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=http://amstellight.com.mx/" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/aWe1A4G.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=http://amstellight.com.mx/" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/ct3Z8bp.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=http://amstellight.com.mx/" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/ecFOGYd.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
