correccion texto avent

--- a/Avent/slider-extendido.html
+++ b/Avent/slider-extendido.html
@@ -292,7 +292,7 @@ durante 6 meses para garantizar el crecimiento, el
 desarrollo y la salud óptima de los bebés.
 Para ayudar a establecer la lactancia materna, las mujeres
 reciben apoyo de profesionales para adaptar los métodos
- de alimentación a sus necesidades
+ de alimentación a sus necesidades.
                             <br>
                                </p>
                            
