CORREccion cta y logo

--- a/Teramont/slider.html
+++ b/Teramont/slider.html
@@ -34,12 +34,12 @@
             .cta {
             position: absolute;
             bottom: 85px;
-            width: 100px;
+            width: 90px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 48%;
-            left: -55px;
-            background-color: #271c77;
+            margin-left: 100px;
+           
+            background-color: #006496;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
@@ -212,7 +212,7 @@
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:18px; margin-left:0px; margin-right: 10px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:25px; text-align:left;">¿Te identificas con él?</span> <img class="logo" style="margin-top: -3px;" src="https://i.imgur.com/AXlqOqT.png" alt=""> </div>
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:25px; text-align:left;">¿Te identificas con él?</span> <img class="logo" style="margin-top: -6px;" src="https://i.imgur.com/AXlqOqT.png" alt=""> </div>
                 </div>
          </div> 
         </a>
