--- a/Teramont/video.html
+++ b/Teramont/video.html
@@ -56,7 +56,7 @@
             z-index: 5;
             margin-left: 105px;
             
-            background-color: #271c77;
+            background-color: #006496;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
