--- a/Tres Cielos/fijo-gif.html
+++ b/Tres Cielos/fijo-gif.html
@@ -221,7 +221,7 @@
             
 
                 <div class="te-images"> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> </div>
-                <div class="te-cover"> <img src="https://i.imgur.com/1xYXjMA.gif" alt="" /> </div>
+                <div class="te-cover"> <img src="https://i.imgur.com/4rd6jvj.gif" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
