--- a/Teramont/video.html
+++ b/Teramont/video.html
@@ -78,7 +78,7 @@
 			</div>
 		</div>
 			<div class="bzm_text">
-				<span class="bzm_text_title  bzm_text_bold" style="font-size:20px; color:#000;"> ¡Tu familia y tú os merecéis un SOBRESALIENTE!
+				<span class="bzm_text_title  bzm_text_bold" style="font-size:20px; color:#000;"> ¡Tu familia y tú se merecen algo sobresaliente!
 </span>
 				
 			</div>
