Ajuste cta para antojeria

--- a/Antojeria/fade.html
+++ b/Antojeria/fade.html
@@ -331,7 +331,7 @@
             <div class="antojeria_logo"><span class="antojeria_text_bold antojeria_text_small">¡Visítanos!</span></div>
         </div>
         <div class="antojeria_cover bg cover-3 carousel-item item-3">
-            <div class="antojeria_logo"><span class="antojeria_text_bold antojeria_text_small">¡Visítanos!</span></div>
+            <div class="antojeria_logo"><span class="antojeria_text_bold antojeria_text_small"> Te esperamos </span></div>
         </div>
         <div class="antojeria_text"> 
             <span class="antojeria_text_title antojeria_text_bold">
