--- a/Antojeria/Cube.html
+++ b/Antojeria/Cube.html
@@ -911,7 +911,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/vgC3St9.png"/>
 <!--#/#--><!--#i4.i223.button.html:button/html-->
-<button id="i223">¡Visítanos!</button>
+<button id="i223">Te esperamos</button>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#--><!--#i4.i183.image.html:image/html-->
@@ -931,7 +931,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/Vl8fV9l.png"/>
 <!--#/#--><!--#i5.i231.button.html:button/html-->
-<button id="i231">¡Visítanos!</button>
+<button id="i231">Te esperamos</button>
 <!--#/#--><!--#i5.i189.image.html:image/html-->
 <img id="i189" src="https://i.imgur.com/vgC3St9.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
@@ -953,7 +953,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/ajBZAGu.png"/>
 <!--#/#--><!--#i6.i233.button.html:button/html-->
-<button id="i233">¡Visítanos!</button>
+<button id="i233">Te esperamos</button>
 <!--#/#--><!--#i6.i191.image.html:image/html-->
 <img id="i191" src="https://i.imgur.com/vgC3St9.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -1067,11 +1067,7 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i4').addEventListener('click', function(e){
-    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i5.i189.image.js:image/base/js*/
@@ -1196,6 +1192,7 @@ if ('click' === 'click') {
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
 
+/*#/#*/
 
   function next(){
              cube_i2.rotate(cube_i2.ROTATE_NEXT)
@@ -1231,7 +1228,7 @@ customName: false;
 /*#/#*//*#i181.i182.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i223.button.meta:button/meta*/
-name: ¡Visítanos!;
+name: Te esperamos;
 customName: false;
 /*#/#*//*#i223.i224.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
@@ -1270,7 +1267,7 @@ customName: 1;
 /*#/#*//*#i58.i59.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i231.button.meta:button/meta*/
-name: ¡Visítanos!;
+name: Te esperamos;
 customName: false;
 /*#/#*//*#i231.i232.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
@@ -1314,7 +1311,7 @@ customName: 1;
 /*#/#*//*#i60.i61.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i233.button.meta:button/meta*/
-name: ¡Visítanos!;
+name: Te esperamos;
 customName: false;
 /*#/#*//*#i233.i234.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
