--- a/Antojeria/fade.html
+++ b/Antojeria/fade.html
@@ -325,10 +325,10 @@
     <div class="antojeria_wrapper carousel-wrapper size_320x480">
        <a href="http://www.antojeriadelmar.com" target="_blank">
         <div class="antojeria_cover bg cover-1 carousel-item item-1">
-            <div class="antojeria_logo"><span class="antojeria_text_bold antojeria_text_small">¡Visítanos!</span></div>
+            <div class="antojeria_logo"><span class="antojeria_text_bold antojeria_text_small">Te esperamos</span></div>
         </div>
         <div class="antojeria_cover bg cover-2 carousel-item item-2">
-            <div class="antojeria_logo"><span class="antojeria_text_bold antojeria_text_small">¡Visítanos!</span></div>
+            <div class="antojeria_logo"><span class="antojeria_text_bold antojeria_text_small">Te esperamos</span></div>
         </div>
         <div class="antojeria_cover bg cover-3 carousel-item item-3">
             <div class="antojeria_logo"><span class="antojeria_text_bold antojeria_text_small"> Te esperamos </span></div>
