--- a/xcaret/fade.html
+++ b/xcaret/fade.html
@@ -326,7 +326,7 @@
 </head>
 
 <body class="value">
-    <div class="value_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
+    <div class="value_wrapper carousel-wrapper size_320x480" style="border: 1px solid #c5c5c5" id="cta" onclick="openUrl();">
        
         <div class="value_cover bg cover-1 carousel-item item-1">
             <div class="value_logo"><span class="value_text_bold value_text_small">Read more</span></div>
