--- a/xcaret/video.html
+++ b/xcaret/video.html
@@ -67,7 +67,7 @@
 
 <div class="bzm_wrapper carousel-wrapper size_300x250">
 
-    <a href="https://www.history.com/shows/kingpin" style="display: block;" target="block">
+    <a href="https://www.xcaretexperiencias.com/tour-xcaret.php" style="display: block;" target="block">
 
         <div class="carousel-container">
 			<div style="text-align:center; margin-top:-10px;">
@@ -85,13 +85,13 @@
          <div style="bottom:0px;height: 1px;text-align:left;margin-top:1%">
                 <div id="botones-para-compartir" style="display:inline;float:left;margin-left:9px;margin-top:2px;">
                     <span>  
-                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://i.imgur.com/ym7BHQ7.png"  target="block">    
+                        <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.xcaretexperiencias.com/tour-xcaret.php"  target="block">    
                         <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/ym7BHQ7.png" title="compartir en facebook" width="22" /></a>
 
-                            <a class="shared" href="https://plus.google.com/share?url=https://i.imgur.com/kgf2GaF.png" target="block">
+                            <a class="shared" href="https://plus.google.com/share?url=https://www.xcaretexperiencias.com/tour-xcaret.php" target="block">
                             <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/kgf2GaF.png" title="compartir en google+" width="22" /></a>
 
-                            <a class="shared" href="https://twitter.com/home?status=http://www.forever21.com/MX/Product/Category.aspx?br=f21&category=dress" target="block">
+                            <a class="shared" href="https://twitter.com/home?status=https://www.xcaretexperiencias.com/tour-xcaret.php" target="block">
                             <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/0OtmGLs.png" title="compartir en twitter" width="22" /></a>
                     </span>
                 </div>
