--- a/xcaret/slider.html
+++ b/xcaret/slider.html
@@ -201,7 +201,7 @@
 </head>
 <body class="cannabis" style="margin:0px;">
 	 <div class="te-container">
-     <a href="%%c1;cpdir=" target="_blank">
+      <a href="https://www.xcaretexperiencias.com/tour-xcaret.php" style="display: block;" target="block">
             <div id="te-wrapper" class="te-wrapper">
                <!--<div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¡Reserva ya!</span></div>-->
                 <div class="te-images"> 
