--- a/Teramont/fade.html
+++ b/Teramont/fade.html
@@ -138,7 +138,7 @@
         }
 
         .tera_text_title {
-            font-size: 140%;
+            font-size: 210%;
             color: #453936;
             display: inline-block;
             width: 97%;
@@ -325,17 +325,17 @@
     <div class="tera_wrapper carousel-wrapper size_320x480" id="cta" onclick="openUrl();">
       <a href="https://www.vw.com.mx/es/autos/suv-teramont.html" target="_blank"> 
         <div class="tera_cover bg cover-1 carousel-item item-1">
-            <div class="tera_logo"><span class="tera_text_bold tera_text_small">¿Te gusta?</span></div>
+            <div class="tera_logo"><span class="tera_text_bold tera_text_small">Sobresaliente</span></div>
         </div>
         <div class="tera_cover bg cover-2 carousel-item item-2">
-            <div class="tera_logo"><span class="tera_text_bold tera_text_small">¿Te gusta?</span></div>
+            <div class="tera_logo"><span class="tera_text_bold tera_text_small">Sobresaliente</span></div>
         </div>
         <div class="tera_cover bg cover-3 carousel-item item-3">
-            <div class="tera_logo"><span class="tera_text_bold tera_text_small">¿Te gusta?</span></div>
+            <div class="tera_logo"><span class="tera_text_bold tera_text_small">Sobresaliente</span></div>
         </div>
         <div class="tera_text"> 
             <span class="tera_text_title tera_text_bold">
-             ¡SOBRESALIENTE! lo mires por donde lo mires
+             Nuevo Teramont
             </span>
             <br/>  
             <span class="tera_text_light tera_text_small" style="color:black;">
