--- a/Teramont/slider.html
+++ b/Teramont/slider.html
@@ -204,7 +204,7 @@
 	 <div class="te-container">
      <a href="https://www.vw.com.mx/es/autos/suv-teramont.html" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-               <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¿Te gusta?</span></div>
+               <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">Sobresaliente</span></div>
                 <div class="te-images"> <img src="https://i.imgur.com/ZA2UaLI.jpg" alt="" /> <img src="https://i.imgur.com/kEF9Zyv.jpg" alt="" /> <img src="https://i.imgur.com/pegEIHt.jpg" alt="" /> </div>
                 <div class="te-cover"> <img src="https://i.imgur.com/ZA2UaLI.jpg" alt="" /> </div>
                 <div class="te-transition">
@@ -212,7 +212,7 @@
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:18px; margin-left:0px; margin-right: 10px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:25px; text-align:left;">¿Te identificas con él?</span> <img class="logo" style="margin-top: -6px;" src="https://i.imgur.com/AXlqOqT.png" alt=""> </div>
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:33px; text-align:left;">¡Nuevo Teramont!</span> <img class="logo" style="margin-top: -15px;" src="https://i.imgur.com/AXlqOqT.png" alt=""> </div>
                 </div>
          </div> 
         </a>
