--- a/Teramont/Cube.html
+++ b/Teramont/Cube.html
@@ -504,7 +504,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 162px; height: 22px;
         -ms-transform: translate(-50%, -50%) translate(0px, 94px) rotate(0deg);
@@ -554,7 +554,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i218.text.css:text/base/css*/
-#i218 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i218 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i218.i219.positioning.css:positioning/base/css.1*/
 #i218 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 179px; height: 24px;
         -ms-transform: translate(0, 0) translate(61px, 182px) rotate(0deg);
@@ -595,13 +595,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(101px, 146px) rotate(0deg);
 }
 /*#/#*//*#i5.i187.text.css:text/base/css*/
-#i187 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i187 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i187.i188.positioning.css:positioning/base/css.1*/
-#i187 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 152px; height: 19px;
-        -ms-transform: translate(-50%, -50%) translate(4px, 91px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(4px, 91px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(4px, 91px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(4px, 91px) rotate(0deg);
+#i187 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 152px; height: 44px;
+        -ms-transform: translate(-50%, -50%) translate(4px, 102px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(4px, 102px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(4px, 102px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(4px, 102px) rotate(0deg);
 }
 /*#/#*//*#i5.i197.image.css:image/base/css*/
 #i197 { opacity: 1; }
@@ -613,7 +613,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(243px, 188px) rotate(0deg);
 }
 /*#/#*//*#i5.i216.text.css:text/base/css*/
-#i216 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i216 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i216.i217.positioning.css:positioning/base/css.1*/
 #i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 180px; height: 24px;
         -ms-transform: translate(0, 0) translate(63px, 181px) rotate(0deg);
@@ -795,7 +795,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(101px, 142px) rotate(0deg);
 }
 /*#/#*//*#i6.i193.text.css:text/base/css*/
-#i193 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i193 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i193.i194.positioning.css:positioning/base/css.1*/
 #i193 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 194px; height: 27px;
         -ms-transform: translate(-50%, -50%) translate(2px, 69px) rotate(0deg);
@@ -816,10 +816,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i220 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i220.i221.positioning.css:positioning/base/css.1*/
 #i220 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 223px; height: 24px;
-        -ms-transform: translate(0, 0) translate(45px, 202px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(45px, 202px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(45px, 202px) rotate(0deg);
-        transform: translate(0, 0) translate(45px, 202px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(45px, 207px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(45px, 207px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(45px, 207px) rotate(0deg);
+        transform: translate(0, 0) translate(45px, 207px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -944,7 +944,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i185.button.html:button/html-->
 <button id="i185">Sobresaliente</button>
 <!--#/#--><!--#i5.i187.text.html:text/html-->
-<div id="i187">Pedal Virtual</div>
+<div id="i187">Sensor de apertura de cajuela</div>
 <!--#/#--><!--#i5.i197.image.html:image/html-->
 <img id="i197" src="https://i.imgur.com/AXlqOqT.png"/>
 <!--#/#--><!--#i5.i216.text.html:text/html-->
@@ -1039,11 +1039,7 @@ document.getElementById('i91').addEventListener('click', function(e){
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i4').addEventListener('click', function(e){
-    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i5.i197.image.js:image/base/js*/
@@ -1057,11 +1053,7 @@ document.getElementById('i95').addEventListener('click', function(e){
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i5').addEventListener('click', function(e){
-    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i6.i60.image.js:image/base/js*/
 
 /*#/#*//*#i6.i199.image.js:image/base/js*/
@@ -1075,11 +1067,7 @@ document.getElementById('i99').addEventListener('click', function(e){
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-document.getElementById('i6').addEventListener('click', function(e){
-    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
-/*#/#*/
-});
+
 /*#/#*//*#i201.i204.image.js:image/base/js*/
 
 /*#/#*//*#i201.i210.image.js:image/base/js*/
