--- a/devlyn/Cube.html
+++ b/devlyn/Cube.html
@@ -722,11 +722,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i24.text.css:text/base/css*/
 #i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px; margin-left: 5px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 265px; height: 33px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 265px; height: 39px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -927,7 +927,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">Usar lentes de contacto, nunca fue tan cómodo</div>
+<div id="i24">¿Quieres una promo 4x3 en lentes de contacto?</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/xeeM9Vw.jpg"/>
 <!--#/#--><!--#i5.i231.button.html:button/html-->
@@ -1067,6 +1067,12 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
 /* Name: On Click; */
+document.getElementById('i4').addEventListener('click', function(e){
+    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+/*#/#*//*#i5.i58.image.js:image/base/js*/
 
 /*#/#*//*#i5.i189.image.js:image/base/js*/
 
@@ -1124,7 +1130,12 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i5').addEventListener('click', function(e){
+    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+/*#/#*//*#i6.i60.image.js:image/base/js*/
 
 /*#/#*//*#i6.i191.image.js:image/base/js*/
 
@@ -1188,7 +1199,11 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
 /* Name: On Click; */
-
+document.getElementById('i6').addEventListener('click', function(e){
+    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
 /*#/#*/
 
   function next(){
