--- a/Teramont/Cube.html
+++ b/Teramont/Cube.html
@@ -554,7 +554,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i218.text.css:text/base/css*/
-#i218 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i218 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i218.i219.positioning.css:positioning/base/css.1*/
 #i218 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 179px; height: 24px;
         -ms-transform: translate(0, 0) translate(61px, 182px) rotate(0deg);
@@ -613,7 +613,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(243px, 188px) rotate(0deg);
 }
 /*#/#*//*#i5.i216.text.css:text/base/css*/
-#i216 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i216 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i216.i217.positioning.css:positioning/base/css.1*/
 #i216 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 180px; height: 24px;
         -ms-transform: translate(0, 0) translate(63px, 181px) rotate(0deg);
@@ -795,7 +795,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(101px, 142px) rotate(0deg);
 }
 /*#/#*//*#i6.i193.text.css:text/base/css*/
-#i193 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+#i193 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i193.i194.positioning.css:positioning/base/css.1*/
 #i193 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 194px; height: 27px;
         -ms-transform: translate(-50%, -50%) translate(2px, 69px) rotate(0deg);
