texto cubo devlyn

--- a/devlyn/Cube.html
+++ b/devlyn/Cube.html
@@ -943,7 +943,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">¿Quieres una promo 4x3 en lentes de contacto?</div>
+<div id="i24">¿Quieres adquirir 4x3 en lentes de contacto?</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/qlZZmKG.jpg"/>
 <!--#/#--><!--#i5.i231.button.html:button/html-->
