--- a/Adform-NewFormat/Venetian.html
+++ b/Adform-NewFormat/Venetian.html
@@ -2193,7 +2193,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i13.i14.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
-#i2 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+#i2 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 728px; height: 90px;
         -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
