ajuste imagen fade

--- a/devlyn/fade.html
+++ b/devlyn/fade.html
@@ -60,7 +60,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/zxtfsp9.jpg");
+            background: url("https://i.imgur.com/eUE4qmc.png");
             background-size: cover;
         }
 
