ajuste texto cubo

--- a/devlyn/Cube.html
+++ b/devlyn/Cube.html
@@ -952,7 +952,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">¿Quieres una oferta 4*3?</div>
+<div id="i24">¿Quieres una oferta 4x3?</div>
 <!--#/#--><!--#i5.i238.image.html:image/html-->
 <img id="i238" src="https://i.imgur.com/3TeFtYF.png"/>
 <!--#/#--><!--#i5.i231.button.html:button/html-->
@@ -968,7 +968,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i201.image.html:image/html-->
 <img id="i201" src="https://i.imgur.com/aWe1A4G.png"/>
 <!--#/#--><!--#i5.i240.text.html:text/html-->
-<div id="i240">(Oferta solo aplica en surcursal)</div>
+<div id="i240">(Oferta sólo aplica en surcursal)</div>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
@@ -1343,7 +1343,7 @@ customName: false;
 /*#/#*//*#i201.i202.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i240.text.meta:text/meta*/
-name: (Oferta solo aplica en surcursal); customName: false;
+name: (Oferta sólo aplica en surcursal); customName: false;
 /*#/#*//*#i240.i241.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i6.cube-panel.meta:cube-panel/meta*/
