formatos tres cielos corregido

--- a/tres cielos nuevo/fijoextendido.html
+++ b/tres cielos nuevo/fijoextendido.html
@@ -100,7 +100,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/jz63U3y.jpg");
+            background: url("https://i.imgur.com/DoVFk0m.png");
             background-size: cover;
         }
 
