--- a/tres cielos nuevo/fijo-gif2.html
+++ b/tres cielos nuevo/fijo-gif2.html
@@ -259,8 +259,8 @@
 
             
 
-                <div class="te-images"> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> </div>
-                <div class="te-cover"> <img src="https://i.imgur.com/mJl8jbh.gif" alt="" /> </div>
+                <div class="te-images"> <img src="https://i.imgur.com/1NCz6Nd.gif" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> </div>
+                <div class="te-cover"> <img src="https://i.imgur.com/1NCz6Nd.gif" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
