--- a/Xcaret-Travel Guía/Travel Guía _ Consejos útiles para viajar.html
+++ b/Xcaret-Travel Guía/Travel Guía _ Consejos útiles para viajar.html
@@ -65,7 +65,16 @@
 			window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2.4\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2.4\/svg\/","svgExt":".svg","source":{"concatemoji":"https:\/\/travelguia.net\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.9.7"}};
 			!function(a,b,c){function d(a,b){var c=String.fromCharCode;l.clearRect(0,0,k.width,k.height),l.fillText(c.apply(this,a),0,0);var d=k.toDataURL();l.clearRect(0,0,k.width,k.height),l.fillText(c.apply(this,b),0,0);var e=k.toDataURL();return d===e}function e(a){var b;if(!l||!l.fillText)return!1;switch(l.textBaseline="top",l.font="600 32px Arial",a){case"flag":return!(b=d([55356,56826,55356,56819],[55356,56826,8203,55356,56819]))&&(b=d([55356,57332,56128,56423,56128,56418,56128,56421,56128,56430,56128,56423,56128,56447],[55356,57332,8203,56128,56423,8203,56128,56418,8203,56128,56421,8203,56128,56430,8203,56128,56423,8203,56128,56447]),!b);case"emoji":return b=d([55357,56692,8205,9792,65039],[55357,56692,8203,9792,65039]),!b}return!1}function f(a){var c=b.createElement("script");c.src=a,c.defer=c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var g,h,i,j,k=b.createElement("canvas"),l=k.getContext&&k.getContext("2d");for(j=Array("flag","emoji"),c.supports={everything:!0,everythingExceptFlag:!0},i=0;i<j.length;i++)c.supports[j[i]]=e(j[i]),c.supports.everything=c.supports.everything&&c.supports[j[i]],"flag"!==j[i]&&(c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&c.supports[j[i]]);c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&!c.supports.flag,c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.everything||(h=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",h,!1),a.addEventListener("load",h,!1)):(a.attachEvent("onload",h),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),g=c.source||{},g.concatemoji?f(g.concatemoji):g.wpemoji&&g.twemoji&&(f(g.twemoji),f(g.wpemoji)))}(window,document,window._wpemojiSettings);
 		</script><script src="./Travel Guía _ Consejos útiles para viajar_files/wp-emoji-release.min.js.descarga" type="text/javascript" defer=""></script>
-		<style type="text/css">
+
+	<style>
+        #biznagaADs {
+            width: 300px;
+            height: 250px;
+            background-color: white;
+        }	
+		
+			
+					<style type="text/css">
 img.wp-smiley,
 img.emoji {
 	display: inline !important;
@@ -655,11 +664,19 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1446806101390-1');
     		<div class="sidebar right grey">
 			<div style="text-align: center">
 <!-- /13837015/TRV_desktop_side -->
+
+<div id='biznagaADs'>
+  <iframe src="https://rawgit.com/BiznagaMedia/EngagementTracker/master/xcaret/fade.html" width="300" height="600" align="center" scrolling="no"  frameborder="0"></iframe>
+                    </div>
+
 <div id="div-gpt-ad-1446806101390-3" data-google-query-id="CMSj57G7g90CFUhxAQod7AMCfA">
 <script type="text/javascript">
 googletag.cmd.push(function() { googletag.display('div-gpt-ad-1446806101390-3'); });
 </script>
-<div id="google_ads_iframe_/13837015/TRV_desktop_side_0__container__" style="border: 0pt none; display: inline-block; width: 300px; height: 600px;"><iframe frameborder="0" src="./Travel Guía _ Consejos útiles para viajar_files/container.html" id="google_ads_iframe_/13837015/TRV_desktop_side_0" title="3rd party ad content" name="" scrolling="no" marginwidth="0" marginheight="0" width="300" height="600" data-is-safeframe="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts allow-top-navigation-by-user-activation" style="border: 0px; vertical-align: bottom;"></iframe></div></div>
+
+
+                    
+                    
 
 </div>			<div style="text-align: center; margin: 10px 0; display: block; overflow: hidden;">
 	<script async="" src="./Travel Guía _ Consejos útiles para viajar_files/f(3).txt"></script>
