--- a/Xcaret-Travel Guía/Travel Guía _ Consejos útiles para viajar.html
+++ b/Xcaret-Travel Guía/Travel Guía _ Consejos útiles para viajar.html
@@ -71,6 +71,7 @@
             width: 300px;
             height: 250px;
             background-color: white;
+            padding: left;
         }	
 		
 			
